[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt" }
buf-view = "0.1.0"
trivial_tree = { version = "0.1.0", path = "/Users/franklin/repos/trivial_tree" }
